<?xml version="1.0"?>
<package format="3">
  <name>autoware_lanelet2_msgs</name>
  <version>0.1.0</version>
  <description>The autoware_lanelet2_msgs package. Contains messages for lanelet2 maps</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
